<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">移动OA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_first">FirstActivity</string>
    <string name="title_mainactivity">智慧校园 — 移动OA</string>

  <!-- 登录 -->
    <string name="login_username_hint">用户名</string>
    <string name="login_password_hint">密码</string>
    <string name="login_password_server">服务器地址</string>
    <string name="login_title">登录</string>
    <string name="login_msg_account_null">"请输入用户名"</string>
    <string name="login_msg_pwd_null">"请输入密码"</string>
    <string name="login_msg_serveraddr_null">"请输入服务器地址"</string>
    <string name="login_progress">正在登录...</string>
    <string name="login_msg_success">"登录成功"</string>
    <string name="login_msg_fail">"服务器地址不正确，登录失败！"</string>
	<string name="login_msg_error">"用户名或密码不正确，请重新输入"</string>
	<string name="login_text_serverset">服务器设置</string>
	
	<!-- 首页 -->
	<string name="main_todo">待办</string>
	<string name="main_home">首页</string>
	<string name="main_personalcenter">个人中心</string>
	<string name="main_popup_addemail">写邮件</string>
	<string name="main_popup_addcontacts">添加通讯录</string>
	<string name="main_popup_addschedule">新增日程</string>
	<string name="refresh_progress">正在刷新...</string>
	
	<!-- 个人设置 -->
	<string name="personalcenter_title">个人设置</string>
	<string name="personal_info">基本信息</string>
	<string name="person_name">姓名</string>
	<string name="person_department">部门名称</string>
	<string name="person_telephone">移动电话</string>
	<string name="person_email">电子邮箱</string>
	<string name="system_info">系统信息</string>
	<string name="system_msg_remind_cycle">提醒周期</string>
	<string name="system_msg_remind">消息提醒</string>
	<string name="system_ring">响铃</string>
	<string name="system_shake">振动</string>
	<string name="person_logout">退出登录</string>
	<string name="photo_album">相册</string>
	<string name="photo_camera">相机</string>
	
	<string name="personalcenter_msg_loadimagefail">加载图像失败</string>
	
	<!-- 公文公告 -->
	<string name="official_notice_title">公文公告</string>
	<string name="official_notice_detail_title">详情</string>
	<!-- 日程 -->
	<string name="schedule_title">日程</string>
    <!-- 待办已办 -->

    <string name="title_task">待办事项</string>
    <string name="title_complete_task">已办事项</string>
    <string name="task_button">待办</string>
    <string name="complete_task_button">已办</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    
    <string name="title_contact">通讯录</string>
    <string name="edit_text_search">&#160;&#160;搜索</string>
    <string name="oneself_tab">个人</string>
    <string name="teacher_tab">教职</string>
    <string name="common_tab">公共</string>
    <string name="contact_detail_title">联系人详情</string>
    <string name="right_button_title">编辑</string>
    <string name="base_info_title">基本信息</string>
    <string name="other_info_title">其他信息</string>
    <string name="user_name_title">姓名&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="user_sex_title">性别&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>    
    <string name="mobile_phone_title">移动电话&#160;&#160;</string>
    <string name="send_sms_title">发送信息</string>
    <string name="email_title">电子邮箱&#160;&#160;</string>
    <string name="unit_name_title0">单位名称&#160;&#160;</string>
    <string name="unit_name_title">部门名称&#160;&#160;</string>
    <string name="duty_title">职位&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;</string>
    <string name="unit_phone_title0">单位电话&#160;&#160;</string>    
    <string name="unit_phone_title">部门电话&#160;&#160;</string>
    <string name="unit_address">单位地址&#160;&#160;</string>
    <string name="home_address_title">家庭地址&#160;&#160;</string>
    <string name="home_phone_title">家庭电话&#160;&#160;</string>
    <string name="delete_contact_button">删除联系人</string>
    <string name="cancel_button">取消</string>
    <string name="complete_button">完成</string>
    <string name="add_contact_title">新增通讯录</string>
    <string name="update_contact_title">编辑通讯录</string>
    <string name="check_all">全选</string>
    <string name="check_cancel">取消</string>
    
    <!-- 版本更新 -->
    <string name="version_title">版本检测</string>
    <string name="version_current">当前版本:</string>
    <string name="version_new">最新版本:</string>
    <string name="version_sure">立即更新</string>
    <string name="version_cancel">取消</string>
</resources>
