<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/add_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fast_menu_selector"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/main_popup_addemail"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@drawable/gray_separator" />

    <TextView
        android:id="@+id/add_contacts_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fast_menu_selector"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/main_popup_addcontacts"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0.5dp"
        android:background="@drawable/gray_separator" />

    <TextView
        android:id="@+id/add_schedule_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/fast_menu_selector"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/main_popup_addschedule"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16" />

</LinearLayout>