<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg" >

    <LinearLayout
        android:id="@+id/login_center_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg_colume"
            android:orientation="vertical" >

            <AutoCompleteTextView
                android:id="@+id/login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_25"
                android:layout_marginRight="@dimen/space_25"
                android:background="@drawable/login_bg_colume"
                android:drawableLeft="@drawable/login_ic_user"
                android:drawablePadding="@dimen/space_10"
                android:ems="10"
                android:textStyle="normal"
                android:textColor="@color/person_text"
                android:textSize="@dimen/text_size_19"
                android:hint="@string/login_username_hint"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray" >
            </View>

            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_25"
                android:layout_marginRight="@dimen/space_25"
                android:background="@drawable/login_bg_colume"
                android:drawableLeft="@drawable/login_ic_pwd"
                android:drawablePadding="@dimen/space_10"
                android:ems="10"
                android:textStyle="normal"
                android:textColor="@color/person_text"
                 android:textSize="@dimen/text_size_19"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:singleLine="true" />

            <View
                android:id="@+id/login_gray_line"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightgray"
                android:visibility="gone" >
            </View>

            <EditText
                android:id="@+id/login_server_address_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_25"
                android:layout_marginRight="@dimen/space_25"
                android:background="@drawable/login_bg_colume"
                android:drawableLeft="@drawable/login_ic_setting"
                android:drawablePadding="@dimen/space_10"
                android:ems="10"
                android:textStyle="normal"
                android:textColor="@color/person_text"
                 android:textSize="@dimen/text_size_19"
                android:hint="@string/login_password_server"
                android:inputType="textAutoComplete"
                android:singleLine="true"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/login_server_address_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/space_25"
            android:layout_marginTop="@dimen/space_30"
            android:text="@string/login_text_serverset"
            android:textColor="@color/blue"
            android:textSize="@dimen/text_size_14" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/space_25"
            android:layout_marginRight="@dimen/space_25"
            android:layout_marginTop="@dimen/space_30"
            android:background="@drawable/login_btn_selector"        
            android:padding="@dimen/space_10"
            android:text="@string/login_title"
            android:textColor="@color/white"
            android:textSize="@dimen/space_15" />
    </LinearLayout>

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="247px"
        android:layout_height="247px"
        android:layout_above="@id/login_center_area"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/space_25"
        android:contentDescription="@string/app_name"
        android:scaleType="fitXY"            
        android:background="@drawable/login_bg_head" />

</RelativeLayout>