<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/personal_center_bg"
    android:orientation="vertical" >

    <com.gta.scpoa.views.CommonTopView
        android:id="@+id/personalcenter_top_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_6"
                android:layout_marginTop="@dimen/space_3"
                android:gravity="left"
                android:padding="@dimen/space_4"
                android:text="@string/personal_info"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/personal_center_head" />

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/personal_center_middle" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_6"
                android:layout_marginTop="@dimen/space_3"
                android:gravity="left"
                android:padding="@dimen/space_4"
                android:text="@string/system_info"
                android:textColor="@color/gray"
                android:textSize="@dimen/text_size_16" />

            <include
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                layout="@layout/personal_center_footer" />

            <Button
                android:id="@+id/personal_center_logout"
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/space_16"
                android:layout_marginRight="@dimen/space_16"
                android:layout_marginTop="@dimen/space_15"
                android:background="@drawable/logout_btn_selector"
                android:minHeight="45dp"
                android:text="@string/person_logout"
                android:textColor="@color/white"
                android:textSize="@dimen/space_15" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>