<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/common_bottom_divide_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/common_bottom_bar_bg"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingBottom="8dp"
        android:paddingTop="8dp" >

        <RelativeLayout
            android:id="@+id/ll_todo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:paddingBottom="@dimen/space_2"
            android:paddingTop="@dimen/space_2" >

            <LinearLayout
                android:id="@+id/left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitCenter"
                    android:src="@drawable/main_btn1_selector" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/space_3"
                    android:text="@string/main_todo" />
            </LinearLayout>

            <TextView
                android:id="@+id/common_bottom_num_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/left"
                android:background="@drawable/main_icon_2"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:visibility="gone" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/ll_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_2"
            android:paddingTop="@dimen/space_2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/main_btn2_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_3"
                android:text="@string/main_home" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_personal_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:orientation="vertical"
            android:paddingBottom="@dimen/space_2"
            android:paddingTop="@dimen/space_2" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:scaleType="fitCenter"
                android:src="@drawable/main_btn3_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/space_3"
                android:text="@string/main_personalcenter" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>